# python-microservices

./: .gitmodules  compose.yaml
containers/auth-app/: Dockerfile  compose.yaml  pyproject.toml  requirements.txt  test.py
containers/auth-app/app/: __init__.py  dependencies.py  main.py
containers/auth-app/app/auth/: api.py  authenticate.py  dependencies.py  models.py
containers/auth-app/app/core/: config.py  db.py  models.py
containers/auth-app/app/router/api_v1/: endpoints.py
containers/auth-app/app/user/: api.py  crud.py  dependencies.py  models.py
containers/auth-app/env/: example.env
containers/auth-app/migrations/: env.py
containers/auth-app/migrations/versions/: 0001_5f76e157c207_users.py  0002_fec8f03e83bf_added_unique_fields.py
containers/converter/: Dockerfile  compose.yaml  example.env  requirements.txt
containers/gateway/: .gitignore  Dockerfile  LICENSE  compose.yaml  example.env  pyproject.toml  requirements.txt  test.py
containers/gateway/app/: __init__.py  main.py
containers/gateway/app/auth/: access.py  api.py
containers/gateway/app/auth_srv/: api.py  dependencies.py
containers/gateway/app/core/: config.py  models.py
containers/gateway/app/router/api_v1/: endpoints.py
containers/gateway/app/user/: api.py  dependencies.py  examples.py  models.py
containers/gateway/app/videos/: api.py  storage.py  validate.py
containers/gateway/env/: example.env
containers/hero-app/: compose.yaml  pyproject.toml
containers/notification/: Dockerfile  example.env  requirements.txt
k8s/: auth-deploy.yaml
manifests/: auth-deploy.yaml
(+28 files in other folders)
