[tool.poetry]
name = "auth_app"
version = "0.1.0"
description = "OAuth2 with Password (and hashing), Bearer with JWT tokens"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
alembic = "^1.10.4"
asyncpg = "^0.27.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
coverage = "^7.2.5"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
